--- a/index_template.html
+++ b/index_template.html
@@ -64,7 +64,7 @@
         <div class="col-md-6">
     <div class="blogPost">
 <div class="card">
-  <img src="../images/4chin/lennon.gif" class="card-img-top" alt="ruka">
+  <img src="images/grubimage.png" class="card-img-top" alt="ruka">
   <div class="card-body">
     <h4 class="card-title"><strong>You are cringe</strong></h4>
 
@@ -143,7 +143,7 @@ But next time surely he will quit, just one last time.
       <div class="col-md-6">
     <div class="blogPost">
 <div class="card">
-  <img src="../Downloads/1610074393365.jpg" class="card-img-top" alt="ruka">
+  <img src="images/1610074393365.jpg" class="card-img-top" alt="ruka">
   <div class="card-body">
     <h4 class="card-title"><strong>You are cringe</strong></h4>
 
