--- a/register_template.html
+++ b/register_template.html
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body style="background-position:center;background-size:110ex;background-image:url(../images/4chin/IamMarinush.png); background-repeat:no-repeat">
+  <body style="background-position:center;background-size:110ex;background-image:url(images/IamMarinush.png); background-repeat:no-repeat">
 
     <!--- #### THE HEAD #### -->
     <div id="header">
