--- a/login_template.html
+++ b/login_template.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div class="container pt-5" style="max-width:500px;min-height:2200px;">
+    <div class="container pt-5" style="width:500px;min-height:2200px;">
       <h2>Login</h2>
         <form method="GET" action=index_template.html>
          <div class="form-group">
