--- a/index_template.html
+++ b/index_template.html
@@ -47,11 +47,11 @@
 
             <div class="col-8" style="text-align:right;">
 
-             <a href="./login_template.html">Выход</a>
+             <a href="./login_template.html">logout</a>
 
              <a href="./index_template.html">post blog</a>
 
-             <a href="./index_template.html">Willkommen Marinush</a>
+             <a href="./index_template.html">Welcome Marinush</a>
            </div>
           </div>
         </div>
@@ -145,11 +145,11 @@ But next time surely he will quit, just one last time.
 <div class="card">
   <img src="images/1610074393365.jpg" class="card-img-top" alt="ruka">
   <div class="card-body">
-    <h4 class="card-title"><strong>You are cringe</strong></h4>
+    <h4 class="card-title"><strong>Accelerationism</strong></h4>
 
   <div id="multiCollapseExample3" class="multi-collapse2 collapse show" style="">
     <p class="card-text text-truncate">
-
+      Anyone trying to work out what they think about accelerationism better do so quickly. That’s the nature of the thing. It was already caught up with trends that seemed too fast to track when it began to become self-aware, decades ago. It has picked up a lot of speed since then.
     </p>
     </div>
     <p>
@@ -161,30 +161,43 @@ But next time surely he will quit, just one last time.
 <div id="multiCollapseExample4" class="multi-collapse2 collapse" style="">
     <div class="card-body">
 
-    <p class="card-text">
-Addiction is probably one of the biggest hurdles most humans will face during their lifespan, whether physiological or not, the latter may be characterized as bad habits, but I shall also use the term addiction to describe the latter due to their nature, I won't be speaking of the former as I do not have any experience with them, even if my analysis does apply to it I won't take any stance on that matter.
+Anyone trying to work out what they think about accelerationism better do so quickly. That’s the nature of the thing. It was already caught up with trends that seemed too fast to track when it began to become self-aware, decades ago. It has picked up a lot of speed since then.
 
-          </p>
+Accelerationism is old enough to have arrived in waves, which is to say insistently, or recurrently, and each time the challenge is more urgent. Among its predictions is the expectation that you’ll be too slow to deal with it coherently. Yet if you fumble the question it poses – because rushed – you lose, perhaps very badly. It’s hard. (For our purposes here “you” are standing in as a bearer of “the opinions of mankind”.)
 
-    <p class="card-text">
-Addictions are the ultimate surrogate activities, they are the surrogate activities for surrogate activities.The need of an addiction is to provide a distraction to men,to satisfy all his heart desires whatever the means. The more satisfied he his the less free he will be to seek other means or to question the nature of his needs. The modern men is more and more pressed by it's addictions, full of needs, but without the capability to satisfy them all, he ultimately becomes miserable.
+Time-pressure, by its very nature, is difficult to think about. Typically, while the opportunity for deliberation is not necessarily presumed, it is at least – with overwhelming likelihood – mistaken for an historical constant, rather than a variable. If there was ever time to think, we think, there still is and will always be. The definite probability that the allotment of time to decision-making is undergoing systematic compression remains a neglected consideration, even among those paying explicit and exceptional attention to the increasing rapidity of change.
 
-          </p>
+In philosophical terms, the deep problem of acceleration is transcendental. It describes an absolute horizon – and one that is closing in. Thinking takes time, and accelerationism suggests we’re running out of time to think that through, if we haven’t already. No contemporary dilemma is being entertained realistically until it is also acknowledged that the opportunity for doing so is fast collapsing.
 
-    <p class="card-text">
-The complexity that addictions brew on the mind of men will inevitably lead to rationalizations or to even worse to a change of mindset to accommodate this new life style brimming with demanding needs. If men finds himself in the former there might not be an escape, unless it's own life is at stake. It is only a matter of time until he realizes that this needs are actually harmful and that his freedom has been taken from him. Ironically men to cope with this he might self-indulge in his addiction to provide him a distraction from the reality. But at last the weight of his actions, the shame and the lack of freedom, might strengthen his will and he will want to quit.
+The suspicion has to arrive that if a public conversation about acceleration is beginning, it’s just in time to be too late. The profound institutional crisis that makes the topic ‘hot’ has at its core an implosion of social decision-making capability. Doing anything, at this point, would take too long. So instead, events increasingly just happen. They seem ever more out of control, even to a traumatic extent. Because the basic phenomenon appears to be a brake failure, accelerationism is picked up again.
 
-          </p>
-    <p class="card-text">
-To quit it is imperative to rewrite his modus operandi and to get rid to his fake needs, simplification is key here, a minimalism of needs should be the ultimate goal. He must resist temptation and strive for a clearer mind.
-          </p>
+Accelerationism links the implosion of decision-space to the explosion of the world – that is, to modernity. It is important therefore to note that the conceptual opposition between implosion and explosion does nothing to impede their real (mechanical) coupling. Thermonuclear weapons provide the most vividly illuminating examples. An H-bomb employs an A-bomb as a trigger. A fission reaction sparks a fusion reaction. The fusion mass is crushed into ignition by a blast process. (Modernity is a blast.)
 
-    <p class="card-text">
-But then rationalization sets in, just one last time, after all what harm there is if it is the last time, just as men makes his decision to quit,  he has given in to the last time although he committed a grave mistake,he just ceased to resist to what he previously concluded as harmful and miserable even if for a moment,he arrogantly takes pleasure on this last time, unaware of the fact that he somewhere deep still lacks the drive and seriousness to quit, given his current actions, he convinces himself he will quit after that, unsurprisingly he will most likely find himself at his previous state.
+This is already to be talking about cybernetics, which also returns insistently, in waves. It amplifies to howl, and then dissipates into the senseless babble of fashion, until the next blast-wave hits.
 
-          </p>
-    <p class="card-text">
-But next time surely he will quit, just one last time.
+For accelerationism the crucial lesson was this: A negative feedback circuit – such as a steam-engine ‘governor’ or a thermostat – functions to keep some state of a system in the same place. Its product, in the language formulated by French philosophical cyberneticists Gilles Deleuze and Félix Guattari, is territorialization. Negative feedback stabilizes a process, by correcting drift, and thus inhibiting departure beyond a limited range. Dynamics are placed in the service of fixity – a higher-level stasis, or state. All equilibrium models of complex systems and processes are like this. To capture the contrary trend, characterized by self-reinforcing errancy, flight, or escape, D&G coin the inelegant but influential term deterritorialization. Deterritorialization is the only thing accelerationism has ever really talked about.
+
+In socio-historical terms, the line of deterritorialization corresponds to uncompensated capitalism. The basic – and, of course, to some real highly consequential degree actually installed – schema is a positive feedback circuit, within which commercialization and industrialization mutually excite each other in a runaway process, from which modernity draws its gradient. Karl Marx and Friedrich Nietzsche were among those to capture important aspects of the trend. As the circuit is incrementally closed, or intensified, it exhibits ever greater autonomy, or automation. It becomes more tightly auto-productive (which is only what ‘positive feedback’ already says). Because it appeals to nothing beyond itself, it is inherently nihilistic. It has no conceivable meaning beside self-amplification. It grows in order to grow. Mankind is its temporary host, not its master. Its only purpose is itself.
+
+“Accelerate the process,” recommended Deleuze & Guattari in their 1972 Anti-Oedipus, citing Nietzsche to re-activate Marx. Although it would take another four decades before “accelerationism” was named as such, critically, by Benjamin Noys, it was already there, in its entirety. The relevant passage is worth repeating in full (as it would be, repeatedly, in all subsequent accelerationist discussion):
+
+    … which is the revolutionary path? Is there one?—To withdraw from the world market, as Samir Amin advises Third World countries to do, in a curious revival of the fascist “economic solution”? Or might it be to go in the opposite direction? To go still further, that is, in the movement of the market, of decoding and deterritorialization? For perhaps the flows are not yet deterritorialized enough, not decoded enough, from the viewpoint of a theory and a practice of a highly schizophrenic character. Not to withdraw from the process, but to go further, to “accelerate the process,” as Nietzsche put it: in this matter, the truth is that we haven’t seen anything yet.
+
+The point of an analysis of capitalism, or of nihilism, is to do more of it. The process is not to be critiqued. The process is the critique, feeding back into itself, as it escalates. The only way forward is through, which means further in.
+
+Marx has his own ‘accelerationist fragment’ which anticipates the passage from Anti-Oedipus remarkably. He says in an 1848 speech ‘On the Question of Free Trade’:
+
+    …in general, the protective system of our day is conservative, while the free trade system is destructive. It breaks up old nationalities and pushes the antagonism of the proletariat and the bourgeoisie to the extreme point. In a word, the free trade system hastens the social revolution. It is in this revolutionary sense alone, gentlemen, that I vote in favor of free trade.
+
+In this germinal accelerationist matrix, there is no distinction to be made between the destruction of capitalism and its intensification. The auto-destruction of capitalism is what capitalism is. “Creative destruction” is the whole of it, beside only its retardations, partial compensations, or inhibitions. Capital revolutionizes itself more thoroughly than any extrinsic ‘revolution’ possibly could. If subsequent history has not vindicated this point beyond all question, it has at least simulated such a vindication, to a maddening degree.
+
+In 2013, Nick Srnicek and Alex Williams sought to resolve this intolerable – even ‘schizophrenic’ – ambivalence in their ‘Manifesto for an Accelerationist Politics,’ which aimed to precipitate a specifically anti-capitalist ‘Left-accelerationism’, clearly demarcated over against its abominably pro-capitalist ‘Right-accelerationist’ shadow. This project – predictably – was more successful at re-animating the accelerationist question than at ideologically purifying it in any sustainable way. It was only by introducing a wholly artificial distinction between capitalism and modernistic technological acceleration that their boundary lines could be drawn at all. The implicit call was for a new Leninism without the NEP (and with the Utopian techno-managerial experiments of Chilean communism drawn upon for illustration).
+
+Capital, in its ultimate self-definition, is nothing beside the abstract accelerative social factor. Its positive cybernetic schema exhausts it. Runaway consumes its identity. Every other determination is shucked-off as an accident, at some stage of its intensification process. Since anything able to consistently feed socio-historical acceleration will necessarily, or by essence, be capital, the prospect of any unambiguously ‘Left-accelerationism’ gaining serious momentum can be confidently dismissed. Accelerationism is simply the self-awareness of capitalism, which has scarcely begun. (“We haven’t seen anything yet.”)
+
+At the time of writing, Left-accelerationism appears to have deconstructed itself back into traditional socialist politics, and the accelerationist torch has passed to a new generation of brilliant young thinkers advancing an ‘Unconditional Accelerationism’ (neither R/Acc., or L/Acc., but U/Acc.). Their online identities – if not in any easily extricable way their ideas – can be searched-out through the peculiar social-media hash-tag #Rhetttwitter.
+
+As blockchains, drone logistics, nanotechnology, quantum computing, computational genomics, and virtual reality flood in, drenched in ever-higher densities of artificial intelligence, accelerationism won’t be going anywhere, unless ever deeper into itself. To be rushed by the phenomenon, to the point of terminal institutional paralysis, is the phenomenon. Naturally – which is to say completely inevitably – the human species will define this ultimate terrestrial event as a problem. To see it is already to say: We have to do something. To which accelerationism can only respond: You’re finally saying that now? Perhaps we ought to get started? In its colder variants, which are those that win out, it tends to laugh.
 
           </p>
       </div>
