--- a/register_template.html
+++ b/register_template.html
@@ -46,9 +46,9 @@
 
             <div class="col-8" style="text-align:right;">
 
-             <a href="./login_template.html">логин</a>
+             <a href="./login_template.html">login</a>
 
-             <a href="./register_template.html">регистр</a>
+             <a href="./register_template.html">register</a>
            </div>
           </div>
         </div>
